Create gift detail html file with elements

--- a/client/style.css
+++ b/client/style.css
@@ -82,7 +82,7 @@ main {
 
 .top-container {
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: center center;
   height: 250px;
 }
